--- a/guia/views/modelo_cliente_views.xml
+++ b/guia/views/modelo_cliente_views.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <record id="view_modelo_tienda_form" model="ir.ui.view">
-        <field name="name">modelo.tienda.form</field>
-        <field name="model">modelo.tienda</field>
+    <record id="view_modelo_cliente_form" model="ir.ui.view">
+        <field name="name">modelo.cliente.form</field>
+        <field name="model">modelo.cliente</field>
         <field name="arch" type="xml">
             <form string="Formulario Tienda">
                 <sheet>
                     <group >
-                        <field name="name" string="Nombre de cliente"></field>
-                        <field name="description" string="Descripcion cliente"></field>
-                        <field name="postcode"></field>                    
+                        <field name="name"></field>
+                        <field name="number"></field>
+                        <field name="reference"></field>
                     </group>
                     <group name="name" string="Grupo 2">
-                        <field name="date_availability"></field>
-                        <field name="expected_price"></field>
+                        <field name="date_of_birth"></field>
+                        <field name="age"></field>
                     </group>
                 </sheet>
             </form>
@@ -42,12 +42,5 @@
         <field name="res_model">modelo.cliente</field>
         <field name="view_mode">tree,form</field>
     </record>
-
-    <menuitem
-        id="modelo_cliente_menu"
-        name="cliente"
-        action="action_tienda_cliente"
-        parent="menu_administrar"
-        sequence="10"/>
 
 </odoo>
